# dae_6_month

./: .gitignore  CONTRIBUTING.md  README.md  _config.yml  index.md
CLI_tool/: .env  .pentestctl_current_project  .pentestctl_last_output  API_KEY_FIX_SUMMARY.md  METASPLOIT_IMPLEMENTATION.md  README.md  gemini_config.yaml  pyproject.toml  pyproject.totml  summary_20251023_120722.md  summary_sample_vulns.md  test_api_key.py  test_models.py  triage_report_sample_vulns.md
CLI_tool/.pentestctl-test-project/: config.yaml
CLI_tool/CLI-TOOL/: config.yaml  project.db
CLI_tool/CLI-TOOL-heloo/: config.yaml  project.db
CLI_tool/CLI-TOOL-heloo/findings/: exploit_metasploit_127.0.0.1_20251111_134926.json  recon_recon_example.com_20251111_134314.json  recon_recon_example.com_20251111_134918.json  scan_nmap_127.0.0.1_20251111_134455.json  scan_nmap_127.0.0.1_20251111_134858.json
CLI_tool/CLI-TOOL-test-project-switching/: config.yaml  project.db
CLI_tool/CLI-TOOL-test-project-switching/findings/: scan_nmap_127.0.0.1_20251111_134530.json  scan_nmap_127.0.0.1_20251111_135113.json
CLI_tool/CLI-TOOL-test-switching/: config.yaml  project.db
CLI_tool/cli_tool/: .pentestctl_last_output  __init__.py  cli.py  pentest.py
CLI_tool/cli_tool/core/: __init__.py  config.py  project.py
CLI_tool/cli_tool/modules/: __init__.py  ai.py  exploit.py  recon.py  scan.py  vuln.py
CLI_tool/cli_tool/reporting/: __init__.py  report.py
CLI_tool/pentestctl/: config.yaml  project.db
Unix_1/: unix.txt
coding_practice/: list_sort.py  stack.py
contributing/: CONTRIBUTING.md  contribute.md  (+1 more)
(+83 files in other folders)
